RESOLVED FIXED234210
[LFC][IFC] Ignore zero width glyphs while collecting fallback fonts
https://bugs.webkit.org/show_bug.cgi?id=234210
Summary [LFC][IFC] Ignore zero width glyphs while collecting fallback fonts
alan
Reported 2021-12-12 10:12:42 PST
ssia
Attachments
Patch (4.00 KB, patch)
2021-12-12 10:27 PST, alan
no flags
Patch (48.13 KB, patch)
2021-12-12 13:05 PST, alan
no flags
alan
Comment 1 2021-12-12 10:27:42 PST
alan
Comment 2 2021-12-12 13:05:49 PST
EWS
Comment 3 2021-12-12 14:11:50 PST
Committed r286928 (245154@main): <https://commits.webkit.org/245154@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 446942 [details].
Radar WebKit Bug Importer
Comment 4 2021-12-12 14:12:20 PST
Note You need to log in before you can comment on or make changes to this bug.