[LFC][IFC] Ignore zero width glyphs while collecting fallback fonts https://bugs.webkit.org/show_bug.cgi?id=234210

Reviewed by Antti Koivisto.

Source/WebCore:

Taking zero width glyphs (e.g. control characters) into consideration while collecting
fallback font information may result in incorrect line height and baseline positioning.

The logic in this patch matches with WidthIterator::commitCurrentFontRange (used by legacy line layout).
It is measured to have only a slight perf impact on layout microbenchmarks (~1%).
Alternatively we could check against unicode ranges to omit certain glyphs.

Test: fast/text/fallback-font-and-zero-width-glyph.html

* layout/formattingContexts/inline/text/TextUtil.cpp:
(WebCore::Layout::fallbackFontsForRunWithIterator):

LayoutTests:

* fast/text/fallback-font-and-zero-width-glyph-expected.html: Added.
* fast/text/fallback-font-and-zero-width-glyph.html: Added.



Canonical link: https://commits.webkit.org/245154@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286928 268f45cc-cd09-0410-ab3c-d52691b4dbfc